[package]
name = "winproc"
version = "0.6.1"
authors = ["Sam Green <sam.green81@gmail.com>"]
description = "Small wrapper over some process-related Windows APIs."
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/samgreen/winproc-rs"
keywords = ["windows"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[badges]
gitlab = { repository = "samgreen/winproc-rs" }

[dependencies]
failure = "0.1"
bitflags = "1.0"
widestring = "0.4"

[dependencies.winapi]
version = "0.3"
features = ["handleapi", "tlhelp32", "realtimeapiset", "winbase", "psapi", "sysinfoapi"]
